# EE800_820

./: .gitignore  AI Use Disclaimer.txt  ExplanationsLog.md  FigList.txt  README.md  TestLog.md  ToDo.txt
Code/AIML/: baselines.py  baselines_manifest.json  cnn_manifest.json  cnn_train.py  deployment_manifest.json  inference.py  live_inference.py  load_and_validate.py  mlp_manifest.json  mlp_train.py  preprocess.py  preprocess_manifest.json  select_model.py  stratified.py  stratified_manifest.json  svm_manifest.json  svm_train.py  validation_manifest.json
Code/EngagementSim/: README.md
Code/EngagementSim/code/EngagementSim/: README.md  pyproject.toml  requirements.txt
Code/EngagementSim/code/EngagementSim/app/: main.py
Code/EngagementSim/code/EngagementSim/app/models/: __init__.py  engagement_state.py  threat.py
Code/EngagementSim/code/EngagementSim/app/simulation/: __init__.py
Code/EngagementSim/code/EngagementSim/app/systems/: __init__.py  jamming.py
Code/EngagementSim/code/EngagementSim/app/ui/: control_panel.py  status_panel.py
Code/EngagementSim/code/EngagementSim/app/utils/: constants.py
Code/EngagementSim/code/EngagementSim/tests/: test_communication.py
Code/LoRa_FPGA_FeaturePipeline/: LoRa_FPGA_FeaturePipeline.xpr
LessonPlans/: Curriculum_Sequence.tex  Module1.tex  glossary.tex
Notes/: URLs.txt
Proposal/: Eschete_Proposal.aux  Eschete_Proposal.tex
Term_Paper/: FinalReportReqs.txt  MidStageReportInstructions.txt
Weekly_Reports/: 20260202_WeeklyReport.tex  20260209_WeeklyReport.tex  20260216_WeeklyReport.tex  20260323_WeeklyReport.tex
(+458 files in other folders)
