[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "EngagementSim"
version = "0.1.0"
description = "Electronic Warfare Engagement Simulator"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
engagementsim = "app.main:main"
